--- a/main.html
+++ b/main.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OTP Verification</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f8f9fb;
     }
 
-    .card {
-      background: #fff;
-      padding: 40px;
-      border: 2px solid #ccc;
-      border-radius: 12px;
+    .container {
+      background: white;
+      border: 2px solid #000;
+      border-radius: 8px;
+      padding: 30px;
       text-align: center;
-      max-width: 500px;
-      width: 90%;
+      max-width: 450px;
+      width: 100%;
     }
 
     #verification_heading {
@@ -31,89 +31,79 @@
     }
 
     #verification_subtext {
-      font-size: 15px;
-      color: #444;
-      margin-bottom: 25px;
+      font-size: 14px;
+      margin-bottom: 20px;
+      color: #555;
     }
 
     .code-container {
       display: flex;
       justify-content: center;
-      gap: 15px;
-      margin-bottom: 25px;
+      gap: 10px;
+      margin-bottom: 20px;
     }
 
     .code {
-      width: 60px;
-      height: 70px;
-      text-align: center;
+      width: 50px;
+      height: 60px;
       font-size: 32px;
-      border: 2px solid #ddd;
+      text-align: center;
+      border: 2px solid #ccc;
       border-radius: 8px;
       outline: none;
-      transition: border-color 0.2s ease-in-out;
     }
 
     .code:focus {
-      border-color: #000;
+      border-color: #333;
     }
 
-    .note {
+    .info {
+      font-size: 12px;
+      color: #777;
       background: #eee;
-      color: #555;
-      font-size: 14px;
-      padding: 10px;
-      border-radius: 6px;
+      padding: 8px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1 id="verification_heading">Verify Your Account</h1>
-    <p id="verification_subtext">
-      We emailed you the six digit code to <b>acciojob@email.com</b>.
-      Enter the code below to confirm your email address.
-    </p>
+  <div class="container">
+    <h2 id="verification_heading">Verify Your Account</h2>
+    <p id="verification_subtext">We emailed you the six digit code to acciojob@email.com. Enter the code below to confirm your email address.</p>
 
     <div class="code-container">
-      <input type="text" maxlength="1" class="code" />
-      <input type="text" maxlength="1" class="code" />
-      <input type="text" maxlength="1" class="code" />
-      <input type="text" maxlength="1" class="code" />
-      <input type="text" maxlength="1" class="code" />
-      <input type="text" maxlength="1" class="code" />
+      <input type="text" maxlength="1" class="code" id="code-1" />
+      <input type="text" maxlength="1" class="code" id="code-2" />
+      <input type="text" maxlength="1" class="code" id="code-3" />
+      <input type="text" maxlength="1" class="code" id="code-4" />
+      <input type="text" maxlength="1" class="code" id="code-5" />
+      <input type="text" maxlength="1" class="code" id="code-6" />
     </div>
 
-    <div class="note">
-      This is design only. We didn't actually send you an email as we
-      don't have your email, right?
-    </div>
+    <p class="info">This is design only. We didn't actually send you an email as we don't have your email, right?</p>
   </div>
 
   <script>
-    const inputs = document.querySelectorAll('.code');
+    const inputs = document.querySelectorAll(".code");
 
     inputs.forEach((input, index) => {
-      input.addEventListener('input', (e) => {
-        const value = e.target.value;
-        if (value && index < inputs.length - 1) {
+      input.addEventListener("input", (e) => {
+        if (e.target.value.length === 1 && index < inputs.length - 1) {
           inputs[index + 1].focus();
         }
       });
 
-      input.addEventListener('keydown', (e) => {
-        if (e.key === 'Backspace') {
-          if (input.value === '' && index > 0) {
+      input.addEventListener("keydown", (e) => {
+        if (e.key === "Backspace") {
+          if (e.target.value === "" && index > 0) {
             inputs[index - 1].focus();
-            inputs[index - 1].value = '';
-          } else {
-            input.value = '';
+            inputs[index - 1].value = "";
           }
         }
       });
     });
 
-    // Auto-focus first input on load
+    // Auto focus first input
     inputs[0].focus();
   </script>
 </body>
